# solvers

./: .gitignore  .gitmodules  README.md
NaTT/: .depend  Makefile  README.md  abbrev.ml  dp.ml  estimator.ml  freezing.ml  io.ml  main.ml  matrix.ml  mset.ml  myXML.ml  nonterm.ml  params.ml  preorder.ml  proc.ml  smt.ml  strategy.ml  subst.ml  sym.ml  term.ml  trs.ml  txtr.ml  util.ml  weight.ml  wpo.ml  wpo_info.ml  wpo_printer.ml
connect++-source-v0.4.0/: COPYING  LICENSE  README.md
connect++-source-v0.4.0/source/: ._SimplePath.cpp  ._SimplePath.hpp  BasicTypes.hpp  CMakeLists.txt  Clause.cpp  Clause.hpp  FOF.cpp  FOF.hpp  InferenceItem.cpp  InferenceItem.hpp  Lemmata.cpp  Lemmata.hpp  Matrix.cpp  Matrix.hpp  Parameters.cpp  Parameters.hpp  ProverOutcome.cpp  ProverOutcome.hpp  Schedule.cpp  Schedule.hpp  SimplePath.cpp  SimplePath.hpp  StackItem.cpp  StackItem.hpp  StackProver.cpp  StackProver.hpp  TPTPParser.cpp  TPTPParser.hpp  connect++-version.hpp.in  connect++.cpp
connect++-source-v0.4.0/source/literal/: ._Predicate.cpp  ._Predicate.hpp  ._PredicateIndex.cpp  ._PredicateIndex.hpp  CMakeLists.txt  Literal.cpp  Literal.hpp  Predicate.cpp  Predicate.hpp  PredicateIndex.cpp  PredicateIndex.hpp
connect++-source-v0.4.0/source/misc/: ._Exceptions.hpp  CMakeLists.txt  Exceptions.cpp  Exceptions.hpp  ProofChecker.cpp  ProofChecker.hpp  ProofPrinter.cpp  ProofPrinter.hpp
connect++-source-v0.4.0/source/prolog/: check_proof.in
connect++-source-v0.4.0/source/substitution/: ._Substitution.cpp  ._Substitution.hpp  ._Unifier.cpp  ._Unifier.hpp  CMakeLists.txt  Substitution.cpp  Substitution.hpp  SubstitutionStack.cpp  SubstitutionStack.hpp  Unifier.cpp  Unifier.hpp
connect++-source-v0.4.0/source/terms/: ._Function.cpp  ._Function.hpp  ._FunctionHash.hpp  ._TermHash.hpp  ._TermIndex.hpp  ._Variable.cpp  ._Variable.hpp  ._VariableIndex.cpp  ._VariableIndex.hpp  CMakeLists.txt  Function.cpp  Function.hpp  FunctionHash.hpp  FunctionIndex.cpp  FunctionIndex.hpp  Term.cpp  Term.hpp  TermHash.hpp  TermIndex.cpp  TermIndex.hpp  Variable.cpp  Variable.hpp  VariableIndex.cpp  VariableIndex.hpp
connect++-source-v0.4.0/source/utilities/: ._vic_strings.cpp  ._vic_strings.hpp  CMakeLists.txt  ClauseComparisons.hpp  Interval.hpp  LaTeXUtilities.cpp  LaTeXUtilities.hpp  PathUtilities.cpp  PathUtilities.hpp  Reorder.hpp  cursor.cpp  cursor.hpp  vic_strings.cpp  vic_strings.hpp
lash-1.14rc1/: a.p  b.p  c.p  d.p  e.p
lash-1.14rc1/modes/: cade22grackle00b  cade22grackle00e  cade22grackle01  cade22grackle020  cade22grackle0270  cade22grackle0274  cade22grackle05  cade22grackle06  cade22grackle09  cade22grackle0f  cade22grackle116  cade22grackle11a  cade22grackle18  cade22grackle1d  cade22grackle20  cade22grackle21  cade22grackle2c  cade22grackle2x01b3  cade22grackle2x052f  cade22grackle2x080b  cade22grackle2x1158  cade22grackle2x1406  cade22grackle2x189d  cade22grackle2x1e4e  cade22grackle2x220a  cade22grackle2x2270  cade22grackle2x26c3  cade22grackle2x2d0b  cade22grackle2x34cb  cade22grackle2x3bfb  cade22grackle2x4343  cade22grackle2x4fb9  cade22grackle2x572f  cade22grackle2x5aff  cade22grackle2x6978  cade22grackle2x6987  cade22grackle2x78f3  cade22grackle2x798d  cade22grackle2x84ac  cade22grackle2x91f4  (+32 more)
lash-1.14rc1/source/: .depend  Makefile  configure
lash-1.14rc1/source/minisat/core/: Solver.cc
lash-1.14rc1/source/src/: atom.ml  atom.mli  config.ml  error.mli  flags.ml  flags.mli  ftm.ml  ftm.mli.hidden  lash.ml  lashmain.ml  lashmain.mli  log.ml  log.mli  minisat.ml  minisat.mli  minisatinterface.ml  ontology.ml  ontology.mli  preterm.ml  refut.ml  refut.mli  search.ml  search.mli  searchoption.ml  searchoption.mli  sine.ml  state.ml  state.mli  syntax.ml  term.ml  term.mli  termP.ml  termP.mli  unsatcore.ml  unsatcore.mli  vector.ml  vector.mli  version.ml
lash-1.14rc1/source/src/c/: ftm_stub.c  hashtbli.h  minisat_stub.cc  prioqueue_stub.cc  recalloc.h  vector.h
lash-1.14rc1/source/src/extra/: FileE.ml  StringE.ml
lash-1.14rc1/source/src/parser/: formula.ml  formula.mli  tptp_config.ml  tptp_config.mli  tptp_parser.mly
lash-1.14rc1/source/src/pfterm/: branch.ml  coq.ml  flag.ml  latex.ml  norm.ml  norm.mli  proofterm.ml  proofterm.mli  refutation.ml  step.ml  step.mli  suche.ml  suche.mli  translation.ml
metitarski/: README_BINARY.txt  RELEASE-NOTES.txt
metitarski/Darwin-i386/lib/: libpolyml.5.dylib  libpolyml.dylib
metitarski/Darwin-i386/tptp/Problems/: lotka-volterra-upper-Yrange.tptp
metitarski/Linux-x86_64/: ._scripts
nanoCoP-i20/: ReadMe_nanoCoP-i  nanocop_tptp2.pl  nanocopi.sh  nanocopi20.pl  nanocopi20_swi.pl  nanocopi_main.pl  nanocopi_proof.pl
satallax-3.4b/: .depend  Makefile
satallax-3.4b/minisat/core/: SolverTypes.h  SolverTypes.h~  depend.mk
satallax-3.4b/minisat/mtl/: template.mk
satallax-3.4b/minisat/simp/: depend.mk
satallax-3.4b/src/: atom.ml  atom.mli  config.ml  config.mli  eprover.ml  eprover.mli  eproverstate.ml  eproverstate.mli  error.ml  flags.ml  flags.mli  foform.ml  foform.mli  fomapping.ml  fomapping.mli  lfthform.ml  lfthmapping.ml  match.ml  minisat.ml  minisat.mli  models.ml  models.mli  ontology.ml  patternclause.ml  patternclause.mli  preterm.mli  priorityqueue.ml  priorityqueue.mli  refut.ml  refut.mli  satallax.ml  satallaxmain.ml  satallaxmain.mli  search.ml  search.mli  searchoption.ml  searchoption.mli  sine.ml  sine.mli  state.ml  (+6 more)
satallax-3.4b/src/coqparser/: coqparser.mly
satallax-3.4b/src/extra/: ListE.ml  OptionE.ml
satallax-3.4b/src/minisat-interface/: Ointerface.cc  SimpSolver.cc  Solver.cc
satallax-3.4b/src/parser/: formula.ml  tptp_config.ml  tptp_lexer.mll  tptp_parser.mly
satallax-3.4b/src/pfterm/: branch.ml  coq.ml  coq.mli  latex.ml  norm.ml  proofterm.ml  refutation.ml  refutation.mli  step.ml  suche.ml  translation.ml
